--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Bienvenido</h1>
+<!DOCTYPE html> <html lang="en"> <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Página web de trabajos</title>
+    <link rel="stylesheet" href="css/style.css">
+    </head> <body>
+    <h1>Bienvenido a mi página web de trabajos de la asignatura LM</h1> <h2>Trabajos</h2>
+    <ul>
+    <li><a href="p1/index.html">P1 - 5 páginas</a></li> <li>P2 - Formulario</li>
+    <li>P3 - 5 páginas CSS 1</li>
+    </ul> </body>
+    </html>
